...
                        } else {
                            setStep(3);
                        }
                    }}
                >
                    <Text style={styles.nextBtnText}>
                        {selectedSize === 'Fatia' ? 'Adicionar ao Pedido' : 'Próximo: Extras'}
                    </Text>
                </TouchableOpacity>
            </View>
        </View>
    );

...
